<resources>
    <string name="app_name">GestionClass</string>
    <string name="title_cursos">Cursos</string>
    <string name="title_colegios">Colegios</string>
    <string name="title_estudiantes">Estudiantes</string>
    <string name="btn_agregar_colegio">Agregar Colegio</string>
    <string name="btn_agregar_curso">Agregar Cursos</string>
    <string name="btn_agregar_estudiante">Agregar Estudiantes</string>

    <!-- dialogos create -->
    <string name="title_dialogo_create">Titulo</string>
    <string name="name_colegio">Nombre del Colegio</string>
    <string name="nro_colegio">N° Colegio</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>