<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title_dialogo_create"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etNombreColegio"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/name_colegio"
        android:inputType="text"
        android:maxLines="2"/>
    <EditText
        android:id="@+id/etNro"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/nro_colegio"
        android:inputType="number"
        android:maxLines="1"/>

    <Button
        android:id="@+id/btnConfirmar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Confirmar" />

</LinearLayout>