<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_colegios">

    <fragment
        android:id="@+id/navigation_colegios"
        android:name="com.fedegst90.gestionclasesapp.ui.colegios.ColegiosFragment"
        android:label="@string/title_colegios"
        tools:layout="@layout/fragment_colegios" >

        <action
            android:id="@+id/action_navigation_colegios_to_navigation_cursos"
            app:destination="@id/navigation_cursos" />
        <action
            android:id="@+id/action_navigation_colegios_to_navigation_estudiantes"
            app:destination="@id/navigation_estudiantes" />
    </fragment>

    <fragment
        android:id="@+id/navigation_cursos"
        android:name="com.fedegst90.gestionclasesapp.ui.cursos.CursosFragment"
        android:label="@string/title_cursos"
        tools:layout="@layout/fragment_cursos" >
        <action
            android:id="@+id/action_navigation_cursos_to_navigation_estudiantes"
            app:destination="@id/navigation_estudiantes" />
        <action
            android:id="@+id/action_navigation_cursos_to_navigation_colegios"
            app:destination="@id/navigation_colegios" />
    </fragment>

    <fragment
        android:id="@+id/navigation_estudiantes"
        android:name="com.fedegst90.gestionclasesapp.ui.estudiantes.EstudiantesFragment"
        android:label="@string/title_estudiantes"
        tools:layout="@layout/fragment_estudiantes" >
        <action
            android:id="@+id/action_navigation_estudiantes_to_navigation_colegios"
            app:destination="@id/navigation_colegios" />
        <action
            android:id="@+id/action_navigation_estudiantes_to_navigation_cursos"
            app:destination="@id/navigation_cursos" />
    </fragment>
</navigation>